[package]
authors = ["Gavin Panella <gavinpanella@gmail.com>"]
description = "allenap's TFTP library"
homepage = "https://github.com/allenap/allenap-libtftp"
keywords = ["unsupported"]
license = "AGPL-3.0"
name = "allenap-libtftp"
readme = "README.md"
repository = "https://github.com/allenap/allenap-libtftp"
version = "0.2.2"

[dependencies]
byteorder = "^1.2.0"
slog = "^2.4.0"
slog-term = "^2.4.0"
